<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView

       android:text="@string/carro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/edtNomeCarro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <requestFocus/>
    </EditText>

    <TextView
   android:text="@string/fabricante"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

    <EditText
       android:id="@+id/edtMarcaCarro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/button"
        android:id="@+id/bntCadastrarCarros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/botao"
        android:id="@+id/bntListarCarros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
